--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,11 @@
     {% vite_hmr_client %}
     {% vite_asset 'main.js' %}
 
-    <title>Django Vite Example</title>
+    <title>BilaBoard App</title>
   </head>
 
   <body>
     
-    <h1>Django Vite Example !</h1>
     {% block inertia %}{% endblock %}
 
   </body>
