--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% load django_vite %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full bg-white">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <title>BilaBoard App</title>
   </head>
 
-  <body>
+  <body class="h-full">
     
     {% block inertia %}{% endblock %}
 
